# Ferrule

./: .gitignore  Cargo.toml  README.md  codecov.yml  deny.toml  justfile  main.py  pyproject.toml  rust-toolchain.toml
crates/ferrule-app/: Cargo.toml
crates/ferrule-app/src/: main.rs
crates/ferrule-app/src/ferrule-core/: Cargo.toml
crates/ferrule-app/tests/: agent_demo_mock.rs  agent_loop_mock.rs  doctor_mock.rs  e2e_real_generate.rs  e2e_real_llama.rs  generate_mock.rs  reinforce_buffer.rs  rollout_mock.rs
crates/ferrule-app/tests/common/: mod.rs
crates/ferrule-bench/: Cargo.toml
crates/ferrule-bench/src/: first_token_smoke.rs  lib.rs  pk_manifest.rs  reference_compare.rs  reference_manifest.rs  summary.rs  token_debug.rs
crates/ferrule-candle/: Cargo.toml
crates/ferrule-candle/src/: device.rs  diff_scoring.rs  lib.rs  policy_bias.rs  prompt.rs  sampling.rs  scoring.rs  source.rs  tokenizer.rs
crates/ferrule-candle/src/family/: deepseek.rs  llama.rs  mod.rs
crates/ferrule-cli/: Cargo.toml
crates/ferrule-cli/src/: args.rs  main.rs  server.rs
crates/ferrule-cli/src/bench/: interactive_trace.rs  mod.rs  summary.rs
crates/ferrule-cli/src/commands/: bench.rs  bench_interactive.rs  chat.rs  compare.rs  cuda.rs  info.rs  inspect.rs  mod.rs  resident.rs  run.rs  serve.rs
crates/ferrule-cli/tests/: dsv4_resident_runtime_local.rs  olmoe_smoke.rs
crates/ferrule-common/: Cargo.toml
crates/ferrule-common/src/: execution.rs  expert_io.rs  expert_residency.rs  kernel_plan.rs  lib.rs  memory.rs  observability.rs
crates/ferrule-cuda/: Cargo.toml  architecture_target.rs  build.rs
crates/ferrule-cuda/native/cutlass/: bridge.cu  ferrule_cutlass.h  sm121_bf16_compressor_prefill.cuh  sm121_dspark_hybrid_attention.cuh  sm121_dspark_main_project_norm.cuh  sm121_dspark_proposal_head.cuh  sm121_fp4_moe.cuh  sm121_fp8_query_kv_prefill.cuh  sm121_hc_producer.cuh  sm121_mla_output.cuh  sm121_shared_ffn.cuh
crates/ferrule-cuda/src/: architecture.rs  benchmark.rs  build.rs  context.rs  counters.rs  cutlass.rs  forward.rs  graph.rs  kernels.rs  kv_page_pool.rs  lib.rs  provider.rs  qcache.rs  weightpack.rs
crates/ferrule-cuda/src/transformer/: artifact_expert.rs  attention.rs  combined_ring.rs  compressor_recurrent.rs  executor.rs  kv.rs  logits.rs  mod.rs  moe.rs  source_expert.rs  sparse_attention.rs
crates/ferrule-cuda/tests/: artifact_kernel_smoke.rs  cutlass_provider.rs  dsv4_decode_topk_boundary.rs  dsv4_kernel_smoke.rs  e2_swiglu_workspace.rs  expert_slot_resolve.rs  fp4_mxf4_smoke.rs  fp8_mma_smoke.rs  moe_segment_smoke.rs  source_kernel_smoke.rs  sparse_attention_warp.rs
crates/ferrule-gguf/: Cargo.toml
crates/ferrule-gguf/src/: lib.rs  safetensors.rs
crates/ferrule-graph/: Cargo.toml
crates/ferrule-graph/src/: cuda_backend.rs  lib.rs  storage.rs  template.rs
crates/ferrule-kernel/: Cargo.toml
crates/ferrule-kernel/src/: lib.rs
crates/ferrule-kernel/src/mha/: cpu.rs
crates/ferrule-model/: Cargo.toml
crates/ferrule-model/src/: artifact_binding.rs  artifact_format.rs  artifact_group.rs  artifact_linear.rs  artifact_tensor.rs  attention_backend.rs  chat.rs  config.rs  cpu_forward.rs  descriptor.rs  ffn.rs  hyper_connection.rs  lib.rs  loader.rs  precision.rs  runner.rs  semantic.rs  semantic_plan.rs  spec.rs  tensor_policy.rs  tokenizer.rs  transformer_plan.rs  weights.rs
crates/ferrule-model/src/artifact/: binding.rs  group.rs  hf.rs  identity.rs  index.rs  input.rs  inventory.rs  linear.rs  mod.rs  source.rs  tensor.rs  tests.rs
crates/ferrule-model/src/conversion/: mod.rs  plan.rs  recipe.rs  tests.rs
crates/ferrule-model/src/execution/: arena.rs  backend.rs  binding.rs  mod.rs  plan.rs  sequence.rs
crates/ferrule-model/src/families/: common.rs  deepseek_v4.rs  mod.rs  qwen3.rs
crates/ferrule-model/src/gguf/: mod.rs  safetensors.rs
crates/ferrule-model/src/models/: mod.rs
crates/ferrule-model/src/moe/: executor.rs  handle.rs  io_uring_reader.rs  mod.rs  prediction.rs  routed.rs  routing.rs  streaming.rs
crates/ferrule-model/src/quant/: gguf_quant.rs  mod.rs
crates/ferrule-model/src/support/: binding.rs  contract.rs  layout.rs  mod.rs  plan.rs  policies.rs  roles.rs  tests.rs  validation.rs
crates/ferrule-model/tests/: deepseek_v4_local.rs
crates/ferrule-quant/: Cargo.toml
crates/ferrule-quant/src/: gguf_quant.rs  lib.rs
crates/ferrule-runtime/: Cargo.toml
crates/ferrule-runtime/src/: action.rs  agent_dataset.rs  agent_loop.rs  algo.rs  artifact_binding.rs  artifact_format.rs  artifact_linear.rs  artifact_tensor.rs  attention_backend.rs  attention_kernel.rs  backend_object_store.rs  buffer.rs  chat.rs  config.rs  cpu_kv.rs  dataset.rs  dialects.rs  dsv4_mock.rs  dsv4_param.rs  dsv4_runner.rs  env.rs  episode.rs  expert_executor.rs  expert_handle.rs  expert_residency.rs  expert_routing.rs  expert_streaming.rs  expert_telemetry.rs  ffn.rs  first_token_smoke.rs  generation.rs  graph_builder.rs  graph_layer_binding.rs  graph_program.rs  graph_runtime.rs  graph_translate.rs  graph_validation.rs  hf_dsv4_runner.rs  hyper_connection.rs  kv.rs  (+37 more)
crates/ferrule-runtime/src/cache/: kv.rs  mod.rs  page_manager.rs  paged_kv.rs
crates/ferrule-runtime/src/engine/: diagnostic.rs  driver.rs  executor.rs  lazy.rs  mod.rs  native_executor.rs  topk_compatibility.rs  worker.rs
crates/ferrule-runtime/src/graph/: builder.rs  dialects.rs  external_bindings.rs  layer_binding.rs  mod.rs  program.rs  runtime.rs  shape_registry.rs  template.rs  translate.rs  validation.rs
crates/ferrule-runtime/src/models/: deepseek_v4.rs  mod.rs
crates/ferrule-runtime/src/sampling/: constraint.rs  mod.rs  (+2 more)
crates/ferrule-runtime/tests/: deepseek_streaming_local.rs  integration_tests.rs  storage_integration.rs
crates/ferrule-server/: Cargo.toml
crates/ferrule-server/src/: config.rs  http.rs  lib.rs  openai.rs  worker.rs
crates/ferrule-storage/: Cargo.toml
crates/ferrule-storage/src/: catalog.rs  descriptor.rs  id.rs  layout.rs  lib.rs  locator.rs  placement.rs  replica.rs  residency.rs  transfer.rs
crates/ferrule-storage/tests/: integration.rs
(+83 files in other folders)
