[workspace]
members = [
  "crates/ferrule-common",
  "crates/ferrule-model",
  "crates/ferrule-cuda",
  "crates/ferrule-runtime",
  "crates/ferrule-server",
  "crates/ferrule-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.2.0"
license = "Apache-2.0"

[workspace.lints.rust]
unsafe_code = "warn"
non_camel_case_types = "warn"
dead_code = "warn"
unused_variables = "warn"
unused_imports = "warn"

[workspace.lints.clippy]
all = "warn"

# ── Release optimizations ────────────────────────────────────────────
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1
