[package]
name = "ferrule-app"
edition.workspace = true
version.workspace = true
license.workspace = true

[features]
default = []
metal = ["ferrule-candle/metal"]
cuda = ["ferrule-candle/cuda"]

[dependencies]
ferrule-core = { path = "../ferrule-core" }
ferrule-candle = { path = "../ferrule-candle" }
ferrule-runtime = { path = "../ferrule-runtime" }

clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
serde_json = "1"
candle-core = "0.10"
candle-nn = "0.10"

[dev-dependencies]
ahash = "0.8"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokenizers = "0.22"
