[package]
name = "ferrule-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Ferrule — Rust-native LLM inference runtime"
repository = "https://github.com/ferrule/ferrule"
readme = "../../README.md"
keywords = ["llm", "inference", "moe", "cuda", "rust"]
categories = ["science", "machine-learning"]

[[bin]]
name = "ferrule"
path = "src/main.rs"

[dependencies]
ferrule-common = { path = "../ferrule-common" }
ferrule-model = { path = "../ferrule-model" }
ferrule-runtime = { path = "../ferrule-runtime" }
ferrule-cuda = { path = "../ferrule-cuda", optional = true }
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustyline = "15"
console = "0.15"
tracing = "0.1"
cuda-core = { git = "https://github.com/devillove084/cuda-oxide.git", branch = "fp-and-graph-support", optional = true }

[features]
default = []
cuda = ["ferrule-cuda", "ferrule-runtime/cuda", "dep:cuda-core"]

[lints]
workspace = true
