[package]
name = "ferrule-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Ferrule — Rust-native LLM inference runtime"
repository = "https://github.com/ferrule/ferrule"
readme = "../../README.md"
keywords = ["llm", "inference", "moe", "cuda", "rust"]
categories = ["science", "machine-learning"]

[[bin]]
name = "ferrule"
path = "src/main.rs"

[dependencies]
ferrule-common = { path = "../ferrule-common" }
ferrule-model = { path = "../ferrule-model" }
ferrule-runtime = { path = "../ferrule-runtime" }
ferrule-cuda = { path = "../ferrule-cuda", optional = true }
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustyline = "15"
console = "0.15"
tracing = "0.1"

[features]
default = []
cuda = ["ferrule-cuda", "ferrule-runtime/cuda", "ferrule-model/cuda"]
# Opt-in only: local ignored DSV4 runtime-driver tests require cargo-oxide,
# CUDA hardware, and a large local `models/DeepSeek-V4-Flash-DSpark` artifact.
local-dsv4-tests = ["cuda"]

[lints]
workspace = true
