[package]
name = "ferrule-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Ferrule — Rust-native LLM inference runtime"
repository = "https://github.com/ferrule/ferrule"
readme = "../../README.md"
keywords = ["llm", "inference", "moe", "cuda", "rust"]
categories = ["science", "machine-learning"]

[[bin]]
name = "ferrule"
path = "src/main.rs"

[dependencies]
ferrule-common = { version = "0.2.0", path = "../ferrule-common" }
ferrule-model = { version = "0.2.0", path = "../ferrule-model" }
ferrule-runtime = { version = "0.2.0", path = "../ferrule-runtime" }
ferrule-server = { version = "0.2.0", path = "../ferrule-server" }
ferrule-cuda = { version = "0.2.0", path = "../ferrule-cuda", optional = true }
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustyline = "15"
console = "0.15"
tracing = "0.1"
tokio = { version = "1", features = ["net", "rt-multi-thread", "signal"] }

[features]
default = []
cuda = ["ferrule-cuda", "ferrule-runtime/cuda", "ferrule-model/cuda"]
cutlass = ["cuda", "ferrule-cuda/cutlass", "ferrule-runtime/cutlass", "ferrule-model/cutlass"]
# Opt-in only: local ignored DSV4 runtime-driver tests require cargo-oxide,
# CUDA hardware, and a large local `models/DeepSeek-V4-Flash-DSpark` artifact.
local-dsv4-tests = ["cuda"]

[lints]
workspace = true
