[package]
name = "ferrule-cuda"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Ferrule — Rust-native LLM inference runtime"
repository = "https://github.com/ferrule/ferrule"
readme = "../../README.md"
keywords = ["llm", "inference", "moe", "cuda", "rust"]
categories = ["science", "machine-learning"]

[features]
default = []

[dependencies]
ferrule-common = { path = "../ferrule-common" }
ferrule-model = { path = "../ferrule-model" }
rayon = "1.10"
memmap2 = "0.9"
tracing = "0.1"
libm = "0.2"
cuda-core = { git = "https://github.com/devillove084/cuda-oxide.git", branch = "fp-and-graph-support" }
cuda-device = { git = "https://github.com/devillove084/cuda-oxide.git", branch = "fp-and-graph-support" }
cuda-host = { git = "https://github.com/devillove084/cuda-oxide.git", branch = "fp-and-graph-support" }
cuda-bindings = { git = "https://github.com/devillove084/cuda-oxide.git", branch = "fp-and-graph-support" }

[lints]
workspace = true
