[package]
name = "ferrule-cuda"
edition.workspace = true
build = "build.rs"
version.workspace = true
license.workspace = true
description = "Ferrule — Rust-native LLM inference runtime"
repository = "https://github.com/ferrule/ferrule"
readme = "../../README.md"
keywords = ["llm", "inference", "moe", "cuda", "rust"]
categories = ["science", "machine-learning"]

[features]
default = []
cutlass = []
# Backward-compatible alias for the original metadata-only bridge feature.
cutlass-sm121a = ["cutlass"]

[dependencies]
ferrule-common = { path = "../ferrule-common" }
rayon = "1.10"
memmap2 = "0.9"
tracing = "0.1"
libm = "0.2"
cuda-core = { git = "https://github.com/devillove084/cuda-oxide.git", branch = "fp-and-graph-support" }
cuda-device = { git = "https://github.com/devillove084/cuda-oxide.git", branch = "fp-and-graph-support" }
cuda-host = { git = "https://github.com/devillove084/cuda-oxide.git", branch = "fp-and-graph-support" }
cuda-bindings = { git = "https://github.com/devillove084/cuda-oxide.git", branch = "fp-and-graph-support" }

[build-dependencies]
cc = "1.2"

[lints]
workspace = true
