[package]
name = "ferrule-cuda"
edition.workspace = true
build = "build.rs"
version.workspace = true
license.workspace = true
description = "Ferrule — Rust-native LLM inference runtime"
repository = "https://github.com/ferrule/ferrule"
readme = "../../README.md"
keywords = ["llm", "inference", "moe", "cuda", "rust"]
categories = ["science", "machine-learning"]

[features]
default = []
cutlass = []

[dependencies]
ferrule-common = { version = "0.2.0", path = "../ferrule-common" }
rayon = "1.10"
memmap2 = "0.9"
tracing = "0.1"
libm = "0.2"
cuda-core = { version = "0.2.1", git = "https://github.com/devillove084/cuda-oxide.git", branch = "fp-and-graph-support" }
cuda-device = { version = "0.2.1", git = "https://github.com/devillove084/cuda-oxide.git", branch = "fp-and-graph-support" }
cuda-host = { version = "0.2.1", git = "https://github.com/devillove084/cuda-oxide.git", branch = "fp-and-graph-support" }
cuda-bindings = { version = "0.2.1", git = "https://github.com/devillove084/cuda-oxide.git", branch = "fp-and-graph-support" }

[build-dependencies]
cc = "1.2"

[lints]
workspace = true
