[package]
name = "ferrule-graph"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Ferrule — device-independent compute graph IR"
repository = "https://github.com/ferrule/ferrule"
readme = "../../README.md"
keywords = ["llm", "inference", "graph", "runtime", "rust"]
categories = ["science", "machine-learning"]

[dependencies]
ferrule-core = { path = "../ferrule-core" }

[lints]
workspace = true
