[package]
name = "ferrule-kernel"
version = "0.1.0"
edition = "2024"


[dependencies]
cuda-device = { git = "https://github.com/devillove084/cuda-oxide.git" }
cuda-host = { git = "https://github.com/devillove084/cuda-oxide.git", features = ["async"] }
cuda-core = { git = "https://github.com/devillove084/cuda-oxide.git" }
cuda-async = { git = "https://github.com/devillove084/cuda-oxide.git" }
cuda-bindings = { git = "https://github.com/devillove084/cuda-oxide.git" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
