[package]
name = "ferrule-model"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Ferrule — Rust-native LLM inference runtime"
repository = "https://github.com/ferrule/ferrule"
readme = "../../README.md"
keywords = ["llm", "inference", "moe", "cuda", "rust"]
categories = ["science", "machine-learning"]

[features]
default = []
cuda = ["dep:ferrule-cuda"]
cutlass = ["cuda", "ferrule-cuda/cutlass"]

[dependencies]
ferrule-common = { path = "../ferrule-common" }
ferrule-cuda = { path = "../ferrule-cuda", optional = true }
memmap2 = "0.9"
byteorder = "1"
half = "2"
tracing = "0.1"
thiserror = "2"
tokenizers = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7.13"
libc = "0.2"

[lints]
workspace = true
