[package]
name = "ferrule-runtime"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Ferrule — Rust-native LLM inference runtime"
repository = "https://github.com/ferrule/ferrule"
readme = "../../README.md"
keywords = ["llm", "inference", "moe", "cuda", "rust"]
categories = ["science", "machine-learning"]

[features]
default = []
cuda = ["dep:ferrule-cuda", "dep:ferrule-quant"]

[dependencies]
ferrule-core = { path = "../ferrule-core" }
ferrule-model = { path = "../ferrule-model" }
ferrule-cuda = { path = "../ferrule-cuda", optional = true }
ferrule-quant = { path = "../ferrule-quant", optional = true }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.21"
tracing = "0.1"

[lints]
workspace = true
