[package]
name = "ferrule-runtime"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Ferrule — Rust-native LLM inference runtime"
repository = "https://github.com/ferrule/ferrule"
readme = "../../README.md"
keywords = ["llm", "inference", "moe", "cuda", "rust"]
categories = ["science", "machine-learning"]

[features]
default = []
cuda = ["dep:ferrule-cuda"]
cutlass = ["cuda", "ferrule-cuda/cutlass", "ferrule-model/cutlass"]

[dependencies]
ferrule-common = { version = "0.2.0", path = "../ferrule-common" }
ferrule-model = { version = "0.2.0", path = "../ferrule-model" }
ferrule-cuda = { version = "0.2.0", path = "../ferrule-cuda", optional = true }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"

[lints]
workspace = true
