[package]
name = "ferrule-storage"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Ferrule — storage and residency vocabulary"
repository = "https://github.com/ferrule/ferrule"
readme = "../../README.md"
keywords = ["llm", "inference", "moe", "storage", "residency"]
categories = ["science", "machine-learning"]

[dependencies]
ferrule-core = { path = "../ferrule-core" }

[lints]
workspace = true
